--- a/styles.css
+++ b/styles.css
@@ -80,7 +80,7 @@ footer {
   margin: 10px;
   background-color: white;
 }
-@media (max-width:768px) {
+@media only screen and (max-width: 768px) {
   .drum{
          font-size: 0px;}
 
