--- a/styles.css
+++ b/styles.css
@@ -81,7 +81,9 @@ footer {
   background-color: white;
 }
 @media only screen and (max-width: 768px) {
-  .drum{
-         font-size: 0px;}
+  .drum{width: 100px;
+        height: 100px;
+        font-size: 0px;}
+.h1{font-size:3rem; }
 
 }
